WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180339
WebArchiveResourceWebResourceHandler leaks when pasting
https://bugs.webkit.org/show_bug.cgi?id=180339
Summary
WebArchiveResourceWebResourceHandler leaks when pasting
Alexey Proskuryakov
Reported
2017-12-03 15:25:46 PST
Over-retained in WebCore.
Attachments
proposed fix
(1.37 KB, patch)
2017-12-03 15:28 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-12-03 15:25:58 PST
<
rdar://problem/35820632
>
Alexey Proskuryakov
Comment 2
2017-12-03 15:28:31 PST
Created
attachment 328311
[details]
proposed fix
Joseph Pecoraro
Comment 3
2017-12-03 19:14:31 PST
So I had a concern about this since the line above said that object was explicitly retained beacuse code later on (in appKit?) would release it. But I didn’t search around for this one. I guess it is safe to say if we see leaks then we should send an auto released.
WebKit Commit Bot
Comment 4
2017-12-03 19:34:48 PST
Comment on
attachment 328311
[details]
proposed fix Clearing flags on attachment: 328311 Committed
r225468
: <
https://trac.webkit.org/changeset/225468
>
WebKit Commit Bot
Comment 5
2017-12-03 19:34:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug