WebArchiveResourceWebResourceHandler leaks when pasting https://bugs.webkit.org/show_bug.cgi?id=180339

Reviewed by Joseph Pecoraro.

* editing/cocoa/WebContentReaderCocoa.mm:
(WebCore::attributesForAttributedStringConversion):


Canonical link: https://commits.webkit.org/196312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225468 268f45cc-cd09-0410-ab3c-d52691b4dbfc